--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maobooklens",
+  "name": "maobooklens-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,5 +11,6 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
-  }
+  },
+  "engines": { "node": ">=18" }
 }
